2007-04-11  Ross Burton  <ross@burtonini.com>

	* xrdb/General.ad:
	* xrdb/Motif.ad:
	* xrdb/Editres.ad:
	* xrdb/Xaw.ad:
	* xrdb/Emacs.ad:
	Remove all settings that are not related to colour (#428615).

2007-04-10  Alexander Larsson <alexl@redhat.com>

	* utils.c (config_notify):
	Also check registered directories for notification.
	Fixes theme e.g. switching.

2007-04-02  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-daemon.c (gnome_settings_daemon_new): return NULL
	when there is an error, not exit(), so that we do proper cleanup.
	Remove code to register GConf callbacks, that is done in utils.c.
	(gnome_settings_daemon_get_conf_client,
	 gnome_settings_daemon_register_callback,
	 gnome_settings_daemon_spawn_with_input,
	 gnome_settings_daemon_get_invisible,
	 gnome_settings_daemon_delayed_show_dialog): removed from the
	GnomeSettingsDaemon interface.

	* utils.c (gnome_settings_get_config_client,
	 gnome_settings_get_invisible,
	 gnome_settings_register_config_callback,
	 gnome_settings_spawn_with_input,
	 gnome_settings_delayed_show_dialog): moved from GnomeSettingsDaemon
	interface.

	* factory.c (main): check return value from gnome_settings_daemon().

	* *.c: adapted to changes in function names.

	* Makefile.am: put source files in alphabetical order.

2007-03-29  Priit Laes  <amd@store20.com>

	* gnome-settings-multimedia-keys.c: (get_term_command), (execute),
	(do_unknown_action), (do_help_action), (do_mail_action),
	(do_media_action), (do_www_action), (do_exit_action), (do_eject_action),
	(do_action): Fix launch application in terminal support. (closes bug
	#362578).

2007-03-26  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-multimedia-keys.c: (dialog_init):
	* gsd-media-keys-window.c: (gsd_media_keys_window_is_valid),
	(initialize_alpha_mode):
	* gsd-media-keys-window.h: rebuild the media window if the state of
	composite has changed (fixes bug #408035)

2007-03-24  Jens Granseuer  <jensgr@gmx.net>
