@@ -1,3 +1,9 @@
+2007-04-20  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* gnome-settings-module.[ch]: new class for modules.
+
+	* Makefile.am: added new files.
+
 2007-04-11  Ross Burton  <ross@burtonini.com>
 
 	* xrdb/General.ad:
